服務中心修改完成

--- a/service.html
+++ b/service.html
@@ -11,10 +11,53 @@
 
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
+    <!-- icon -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./css/service.css">
+    <style>
+        footer {
+            margin-top: 21.5vw;
+        }
+
+        .footer-mask {
+            bottom: 47%;
+            z-index: 1;
+        }
+
+        .grass {
+            position: absolute;
+            z-index: 1;
+            right: 0%;
+            top: -11.8%;
+            width: 36%;
+        }
+
+        #top {
+            opacity: 0.7;
+        }
+
+        footer {
+            bottom: -300%;
+        }
+
+        .footer-mask {
+            bottom: 46%;
+        }
+
+        .footer-curve {
+            background-color: #86817c;
+        }
+
+        #middle .middle-background {
+            clip-path: ellipse(100% 100% at 50% -22%);
+        }
+    </style>
 </head>
 
 <body>
+
     <section id="middle">
         <div class="middle-background"></div>
         <div class="col d-flex align-items-baseline title">
@@ -23,10 +66,11 @@
         <embed class="title-mask" src="/img/service/標題用.png" type="">
         <h3 class="subtitle">Information</h3>
         <div class="content">
-            　　騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見的工程作品，光是在遠處觀望便能感受其滂薄的氣勢。騎出隧道以後，眼前所見即為花樑鋼橋，同樣建置於日治時期，全長約382公尺，每兩個橋墩上都有一組花樑的鋼製桁架，是現今較為罕見
+            　　早期獨特建構的鐵馬隧道，能盡情享受，鑽隧道與欣賞過橋梁的沿途風景，還有最具挑戰的髮夾彎，車道在此有 180 度的 U 自行大彎，以及一段長長的下坡，就像是坐雲霄飛車一樣，迎面而來的風，把所有煩惱都給吹走，讓心情整個輕快起來，最後的重頭戲就是和火車競速，這會是從未經歷過的經驗。
+            <br><br>
+            　　車道除了跨越大甲溪，穿過身長的隧道，沿途有解說牌，解說著車道發展歷史，休憩涼亭，更是提供遊客舒服遮蔭的地方，靜靜休憩著欣賞優美的環境，可與東豐自行車綠廊交接 並可與東豐自行車綠廊交接，形成總長約 18 公里，且具獨特、懷舊、休閒的自行車專用道休閒的自行車專用道。
         </div>
-
-
+        <div class="bike"><img src="./img/service/LOGO-腳踏車.png" alt=""></div>
     </section>
 
     <section id="bottom">
@@ -37,37 +81,121 @@
             <embed class="title-mask" src="/img/service/標題用.png" type="">
             <h3 class="subtitle">Transportation</h3>
 
-            <div class="cards">
-                <div class="card">
-                    <div class="card-title">我是title</div>
-                    <div class="card-content">內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文</div>
+            <div class="card-group">
+                <div class="cards">
+                    <div class="icon"><i class="fas fa-bus"></i></div>
+                    <div class="cards-title">公車</div>
+                    <div class="cards-content">
+                        <h5>台中火車站出發 805線</h5>台中火車站－谷關 <br>行經國道一號及四號，停靠東豐、后豐鐵馬道交會處。
+                        <h5>高鐵烏日站出發 153線</h5>高鐵臺中站－谷關 <br>
+                    </div>
                 </div>
-                <div class="card">
-                    <div class="card-title">我是title</div>
-                    <div class="card-content">內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文</div>
+                <div class="cards">
+                    <div class="icon"><i class="fas fa-car"></i></div>
+                    <div class="cards-title">開車</div>
+                    <div class="cards-content">行經國道一號在大雅/豐原處轉接到國道四號豐原端下交流道，<br>迴轉接國豐路三段，沿路即可看到指標告示牌引導。</div>
                 </div>
-                <div class="card">
-                    <div class="card-title">我是title</div>
-                    <div class="card-content">內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文內文</div>
+                <div class="cards">
+                    <div class="icon"><i class="fas fa-subway"></i></div>
+                    <div class="cards-title">火車</div>
+                    <div class="cards-content">
+                        <h5>后里火車站</h5>出火車站後左轉沿著后科路一路南走，直到國豐路三段。
+                        <h5>豐原火車站</h5>出火車站後站可看見豐勢路一段向北行台三線，直到國豐路三段。
+                    </div>
                 </div>
             </div>
         </div>
         <div class="title">聯絡我們</div>
         <embed class="title-mask" src="/img/service/banner點綴.png" type="">
-        <form action="" class="contact">
-            <div>用戶回饋</div>
-            <label for="name">姓名</label>
-            <input type="text" name="name" id="name">
-            <label for="email">Email</label>
-            <input type="text" name="email" id="email">
-            <label for="phone">電話</label>
-            <input type="text" name="phone" id="phone">
-            <label for="detail">問題</label>
-            <textarea name="detail" id="detail"></textarea>
-            <button type="submit"></button>
-        </form>
+
+        <div class="pen-title">
+            <div class="container">
+                <div class="card"></div>
+                <div class="card">
+                    <h1 class="title">Login</h1>
+                    <form>
+                        <div class="input-container">
+                            <input type="#{type}" id="name" required="required" />
+                            <label for="name">姓名</label>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="input-container">
+                            <input type="#{type}" id="title" required="required" />
+                            <label for="title">問題主旨</label>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="input-container">
+                            <input type="#{type}" id="email" required="required" />
+                            <label for="email">電子信箱</label>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="input-container">
+                            <input type="#{type}" id="content" required="required" />
+                            <label for="content">意見回饋</label>
+                            <div class="bar"></div>
+                        </div>
+                        <div class="button-container">
+                            <button><span>傳送</span></button>
+                        </div>
+                    </form>
+                </div>
+                <div class="card alt">
+                    <div class="toggle">
+                        <i class="fas fa-pen-nib"></i>
+                    </div>
+                </div>
+            </div>
 
     </section>
+
+    <footer>
+        <embed class="footer-mask" src="./img/index/footer用-總和.png" type="">
+        <embed class="grass" src="./img/index/footer草叢.png" type="">
+        <div class="footer-curve"></div>
+        <div class="footer-container">
+            <div class="footer-menu">
+                <div class="footer-menu-title">最新消息</div>
+                <div class="footer-menu-item">最近活動</div>
+                <div class="footer-menu-item">施工消息</div>
+                <div class="footer-menu-item">租車優惠</div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-title">景點介紹</div>
+                <div class="footer-menu-item">朋友聚會</div>
+                <div class="footer-menu-item">情侶約會</div>
+                <div class="footer-menu-item">親子同樂</div>
+                <div class="footer-menu-item">歷史巡禮</div>
+                <div class="footer-menu-item">自然景觀</div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-title">附近店家</div>
+                <div class="footer-menu-item">美食饗宴</div>
+                <div class="footer-menu-item">伴手禮</div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-title">揪團</div>
+                <div class="footer-menu-item">照片牆</div>
+                <div class="footer-menu-item">揪團群</div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-title">會員系統</div>
+                <div class="footer-menu-item">申請會員</div>
+                <div class="footer-menu-item">管理</div>
+            </div>
+            <div class="footer-menu">
+                <div class="footer-menu-title">服務中心</div>
+                <div class="footer-menu-item">交通資訊</div>
+                <div class="footer-menu-item">聯絡我們</div>
+            </div>
+
+            <div class="footer-news"></div>
+
+        </div>
+
+
+    </footer>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
@@ -79,6 +207,15 @@
 
     <!-- swiper js -->
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script>
+        $('.toggle').on('click', function () {
+            $('.container').stop().addClass('active');
+        });
+
+        $('.close').on('click', function () {
+            $('.container').stop().removeClass('active');
+        });
+    </script>
 </body>
 
 </html>
