服務中心腳踏車

--- a/service.html
+++ b/service.html
@@ -66,11 +66,13 @@
         <embed class="title-mask" src="/img/service/標題用.png" type="">
         <h3 class="subtitle">Information</h3>
         <div class="content">
-            　　早期獨特建構的鐵馬隧道，能盡情享受，鑽隧道與欣賞過橋梁的沿途風景，還有最具挑戰的髮夾彎，車道在此有 180 度的 U 自行大彎，以及一段長長的下坡，就像是坐雲霄飛車一樣，迎面而來的風，把所有煩惱都給吹走，讓心情整個輕快起來，最後的重頭戲就是和火車競速，這會是從未經歷過的經驗。
+            　　早期獨特建構的鐵馬隧道，能盡情享受，鑽隧道與欣賞過橋梁的沿途風景，還有最具挑戰的髮夾彎，車道在此有 180 度的 U
+            自行大彎，以及一段長長的下坡，就像是坐雲霄飛車一樣，迎面而來的風，把所有煩惱都給吹走，讓心情整個輕快起來，最後的重頭戲就是和火車競速，這會是從未經歷過的經驗。
             <br><br>
-            　　車道除了跨越大甲溪，穿過身長的隧道，沿途有解說牌，解說著車道發展歷史，休憩涼亭，更是提供遊客舒服遮蔭的地方，靜靜休憩著欣賞優美的環境，可與東豐自行車綠廊交接 並可與東豐自行車綠廊交接，形成總長約 18 公里，且具獨特、懷舊、休閒的自行車專用道休閒的自行車專用道。
+            　　車道除了跨越大甲溪，穿過身長的隧道，沿途有解說牌，解說著車道發展歷史，休憩涼亭，更是提供遊客舒服遮蔭的地方，靜靜休憩著欣賞優美的環境，可與東豐自行車綠廊交接 並可與東豐自行車綠廊交接，形成總長約 18
+            公里，且具獨特、懷舊、休閒的自行車專用道休閒的自行車專用道。
         </div>
-        <div class="bike"><img src="./img/service/LOGO-腳踏車.png" alt=""></div>
+        <div class="bike-img"></div>
     </section>
 
     <section id="bottom">
@@ -216,6 +218,7 @@
             $('.container').stop().removeClass('active');
         });
     </script>
+    <script src="/js/service.js"></script>
 </body>
 
 </html>
